<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酷醒</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alarm">闹钟</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="set_clock">闹钟设置</string>
    <string name="clear_clock_voice">帅的人已经醒了，丑的还在睡！</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="unopen">未开启</string>
    <string name="seven_clock">07:00</string>
    <string name="early_moring">我要早起!</string>
    <string name="voice">音量</string>
    <string name="period">周期</string>
    <string name="bells">铃声</string>
    <string name="save">保存</string>
    
        <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

</resources>
