<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/monday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/tuesday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/wednesday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/thursday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/friday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/saturday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="#323232"
            android:textSize="18sp" />

        <com.zcw.togglebutton.ToggleButton
            android:id="@+id/sunday_button"
            android:layout_width="45dp"
            android:layout_height="22dp" />
    </LinearLayout>

</LinearLayout>