<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res/com.science.coolclock"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ecec9"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:contentInsetStart="0dp" >

        <ImageView
            android:id="@+id/back"
            style="@style/ImageView.Hamburger"
            android:contentDescription="@null"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_clock"
            android:textColor="#fff"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <com.science.coolclock.widget.RevealLayout
        android:id="@+id/reveal_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar" >

        <RelativeLayout
            android:id="@+id/set_clock_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.science.coolclock.widget.RevealLayout
                android:id="@+id/reveal_top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- 声音 -->

                <RelativeLayout
                    android:id="@+id/voice_record_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#7ecec9" >

                    <ImageView
                        android:id="@+id/voice_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@null"
                        android:src="@drawable/voice_record" />

                    <TextView
                        android:id="@+id/clear_clock_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/voice_record"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/clear_clock_voice"
                        android:textColor="#fff"
                        android:textSize="16sp" />
                </RelativeLayout>

                <!-- 时间 -->

                <RelativeLayout
                    android:id="@+id/time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >

                    <com.science.coolclock.widget.RippleView
                        android:id="@+id/time_set_ripple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        app1:rv_color="@android:color/holo_blue_light"
                        ripple:rv_type="rectangle"
                        ripple:rv_zoom="true" >

                        <TextView
                            android:id="@+id/time_set"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/set_time_text_bg_style"
                            android:gravity="center"
                            android:text="@string/seven_clock"
                            android:textColor="@android:color/holo_blue_light"
                            android:textSize="50sp" />
                    </com.science.coolclock.widget.RippleView>

                    <EditText
                        android:id="@+id/clock_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/time_set_ripple"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/edittext_style"
                        android:gravity="center_horizontal"
                        android:hint="@string/early_moring"
                        android:textColor="#3e3e39"
                        android:textColorHint="@android:color/darker_gray" />
                </RelativeLayout>
            </com.science.coolclock.widget.RevealLayout>

            <LinearLayout
                android:id="@+id/select_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reveal_top_layout"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin" >

                <!-- 选择音乐 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <com.science.coolclock.widget.RippleView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app1:rv_color="@android:color/holo_blue_light"
                        ripple:rv_type="rectangle"
                        ripple:rv_zoom="true" >

                        <ImageView
                            android:id="@+id/select_music"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/set_music"
                            android:tint="@android:color/holo_blue_light" />
                    </com.science.coolclock.widget.RippleView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/bells"
                        android:textColor="#3e3e39" />
                </LinearLayout>

                <!-- 选择星期 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <com.science.coolclock.widget.RippleView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app1:rv_color="@android:color/holo_blue_light"
                        ripple:rv_type="rectangle"
                        ripple:rv_zoom="true" >

                        <ImageView
                            android:id="@+id/select_day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/set_day"
                            android:tint="@android:color/holo_blue_light" />
                    </com.science.coolclock.widget.RippleView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/period"
                        android:textColor="#3e3e39" />
                </LinearLayout>

                <!-- 音量 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <com.science.coolclock.widget.RippleView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app1:rv_color="@android:color/holo_blue_light"
                        ripple:rv_type="rectangle"
                        ripple:rv_zoom="true" >

                        <ImageView
                            android:id="@+id/set_voice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/set_voice"
                            android:tint="@android:color/holo_blue_light" />
                    </com.science.coolclock.widget.RippleView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/voice"
                        android:textColor="#3e3e39" />
                </LinearLayout>
            </LinearLayout>

            <com.science.coolclock.widget.RippleView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/select_ll"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                app1:rv_color="@android:color/white"
                ripple:rv_type="rectangle"
                ripple:rv_zoom="true" >

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style"
                    android:text="@string/save"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </com.science.coolclock.widget.RippleView>
        </RelativeLayout>
    </com.science.coolclock.widget.RevealLayout>

</RelativeLayout>