<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guillotine_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ecec9"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp" >

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_90" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" >

        <com.science.coolclock.widget.RippleView
            android:id="@+id/ripple_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ripple_settings"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true" >

            <TextView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/alarm"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/alarm"
                android:textColor="#fff"
                android:textSize="26sp" />
        </com.science.coolclock.widget.RippleView>

        <com.science.coolclock.widget.RippleView
            android:id="@+id/ripple_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true" >

            <TextView
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/settings"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="#fff"
                android:textSize="26sp" />
        </com.science.coolclock.widget.RippleView>

        <com.science.coolclock.widget.RippleView
            android:id="@+id/ripple_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ripple_settings"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true" >

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/about"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textColor="#fff"
                android:textSize="26sp" />
        </com.science.coolclock.widget.RippleView>
    </RelativeLayout>

</RelativeLayout>